# hep-ipython-tools

./: .coveragerc  .gitignore  .travis.yml  README.md  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  hep_ipython_tools.basic.rst  hep_ipython_tools.rst  hep_ipython_tools.simple.rst  index.rst
hep_ipython_tools/: calculation.py  calculation_process.py  calculation_queue.py  entities.py  information.py  ipython_handler.py  process.py  statistics.py  viewer.py
hep_ipython_tools/basf2/: __init__.py  calculation.py  calculation_process.py  information.py  ipython_handler.py  process.py  viewer.py
hep_ipython_tools/basic/: __init__.py
hep_ipython_tools/ipython_handler_basf2/: __init__.py  calculation.py  calculation_process.py  entities.py  information.py  ipython_handler.py  python_modules.py  viewer.py
hep_ipython_tools/simple/: __init__.py  calculation.py  calculation_process.py  information.py  ipython_handler.py  viewer.py
hep_ipython_tools/test/: fixtures.py  test_IPythonHandler.py  test_calculationList.py  test_calculationProcess.py  test_calculationQueue.py
hep_ipython_tools/tests/: fixtures.py  test_IPythonHandler.py  test_calculation.py  test_calculationProcess.py  test_calculationQueue.py  test_entities.py  test_environmentInformation.py
