[metadata]
name = hep-ipython-tools
summary = 
author = Nils Braun
author-email = nils.braun@kit.edu
license = none
home-page = https://github.com/hep-ipython-tools/hep-ipython-tools
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = Development Status :: 4 - Beta,
              Programming Language :: Python

[entry_points]


[files]
packages =
    hep-ipython-tools

[pytest]
addopts = hep_ipython_tools/tests --cov hep_ipython_tools --cov-report term-missing --verbose

[aliases]
test = pytest
docs = build_sphinx

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
format = bdist_wheel
